# ClassiPyGRB

./: .gitignore  MANIFEST.in  README.html  README.ipynb  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: draft-pdf.yml  tests.yml
ClassiPyGRB/: __init__.py  _swift.py  _tools.py  _viewer.py
Documentation/: Data_Interpolating.ipynb  Data_Preprocessing.ipynb  Noise_Reduction.ipynb  Swift_Data_Download.ipynb  Topics_of_Current_Interest.ipynb  openTSNE_Introduction.ipynb  t-SNE_Introduction.ipynb
Documentation/.ipynb_checkpoints/: t-SNE_Introduction-checkpoint.ipynb
Documentation/Notebooks/: Data_Preprocessing.ipynb  Swift_Data_Download.ipynb
JOSS_Docs/: example  paper.bib  paper.md
Tables/: GRBlist_not_enough_evt_data.txt  GRBlist_redshift_BAT.txt  GRBlist_short_GRB_with_EE.txt  GRBlist_single_pulse_GRB.txt  GRBlist_tentative_detection.txt  GRBlist_tentative_detection_with_note.txt  Obvious_data_gap.txt  summary_burst_durations.txt
docs/: 1.1.Duration_Histograms.ipynb  1.Basic_Usage.ipynb  10.Extended_Emission.ipynb  11.Viewer_Instance.ipynb  2.BAT_Data_Download.ipynb  3.BAT_Preprocess.ipynb  4.BAT_Noise_Reduction.ipynb  5.BAT_Interpolate.ipynb  6.TSNE_Introduction.ipynb  6.openTSNE_Introduction.ipynb  7.TSNE_Overview.ipynb  9.Cluster_Properties.ipynb
docs/Animations/images/: example
scripts/: helpers.py  main.py
src/ClassiPyGRB/: _swift.py  _tools.py  _viewer.py
src/ClassiPyGRB/summary_tables/: GRBlist_redshift_BAT.txt  summary_burst_durations.txt  summary_general.txt
tests/: test_data_query.py  test_init.py  test_preprocess.py  test_tools.py
tests/Data/: GRB180115A_sn5_10s.h5
