[metadata]
name = ClassiPyGRB
version = 0.1.1
author = Garcia-Cifuentes, K., Becerra, R. L., De Colle, F.
author_email = keneth.garcia@correo.nucleares.unam.mx
description = Package to classify and visualize GRBs from Swift based on Manifold Learning Algortihms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KenethGarcia/ClassiPyGRB
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = ClassiPyGRB
packages = find:
python_requires = >=3.8

[options.packages.find]
where = ClassiPyGRB
